Fixed issue with keyboard not hiding on mobile

--- a/client/src/css/home.scss
+++ b/client/src/css/home.scss
@@ -30,7 +30,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: 35px;
+  margin-bottom: 14px;
 }
 
 .home-search {
@@ -47,7 +47,7 @@
     margin: 0px 25px;
     font-style: italic;
     font-size: 14px;
-    transition: opacity .5s;
+    transition: opacity 0.5s;
   }
 }
 
